--- a/DBTestPHP/style.css
+++ b/DBTestPHP/style.css
@@ -133,10 +133,12 @@ html:has(dialog[open]) {
     position: fixed;
     flex-direction: column;
     background-color: #aaabbe;
+    margin-top: -86px;
     left: 0;
     width: 200px;
     height: 1000px;
-    padding: 20px 20px;
+    padding: 100px 20px;
+    z-index: -1;
 }
 
 #CloseButton {
