--- a/DBTestPHP/style.css
+++ b/DBTestPHP/style.css
@@ -242,7 +242,7 @@ input[type=text] {
     height: 25px;
     box-sizing: border-box;
     border: 1.5px solid #555;
-    margin: 3px 0;
+    margin: 3px 1px;
     border-radius: 2px;
     padding-left: 10px;
 }
